<resources>
    <string name="app_name">Wallpaper Every Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="wallpaper">Wallpaper</string>
    <string name="apply_wallpaper">Apply wallpaper</string>
    <string name="apply_home">Apply for Home Screen</string>
    <string name="apply_lockscreen">Apply for Lock Screen</string>
    <string name="apply_all">Apply for All Screen</string>
    <string name="page_title_list">Wallpapers</string>
    <string name="settings">Settings</string>
    <string name="autoinstall_wallpaper">Install new wallpaper every day</string>
    <string name="autodelete_wallpaper">Delete last weeks wallpaper</string>
    <string name="subtitle">everyday</string>
    <string name="info">Info</string>
    <string name="dialog_title">Auto update</string>
    <string name="dialog_supporting_text">Install new wallpaper every day?</string>
    <string name="dialog_cancel">No</string>
    <string name="dialog_accept">Yes</string>
    <string name="wallpaper_transition_name" translatable="false">wallpaper_transition</string>
    <string name="dialog_title_del">Auto delete</string>
    <string name="dialog_supporting_text_del">Delete wallpapers older than a week?</string>
    <string name="del_cache">Clear cache</string>
    <string name="no_internet">No internet connection</string>
    <string name="description_wp" translatable="false">new day, new wallpaper</string>
</resources>