<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wallpaperfragment.WallpaperFragment">

    <ImageView
        android:id="@+id/imageWallpaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/wallpaper"
        android:fitsSystemWindows="true"
        android:src="@drawable/th"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/apply_wallpaper"
        android:src="@drawable/ic_baseline_expand_less_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/apply_home_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/apply_home"
        android:text="@string/apply_home"
        app:fabSize="normal"
        app:icon="@drawable/ic_baseline_mobile_screen_share_24"
        app:layout_constraintBottom_toTopOf="@+id/fab_apply"
        app:layout_constraintEnd_toEndOf="@+id/fab_apply"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fab_apply"
        app:showMotionSpec="@anim/fab_show_motion_spec"
        app:hideMotionSpec="@anim/fab_hide_motion_spec"/>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/apply_lockscreen_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/apply_lockscreen"
        android:text="@string/apply_lockscreen"
        app:fabSize="normal"
        app:icon="@drawable/ic_baseline_mobile_screen_share_24"
        app:layout_constraintBottom_toTopOf="@+id/apply_home_fab"
        app:layout_constraintEnd_toEndOf="@+id/apply_home_fab"
        app:layout_constraintStart_toStartOf="@+id/apply_home_fab"
        app:showMotionSpec="@anim/fab_show_motion_spec"
        app:hideMotionSpec="@anim/fab_hide_motion_spec"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/apply_all_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/apply_all"
        android:text="@string/apply_all"
        app:fabSize="normal"
        app:icon="@drawable/ic_baseline_offline_share_24"
        app:layout_constraintBottom_toTopOf="@+id/apply_lockscreen_fab"
        app:layout_constraintEnd_toEndOf="@+id/apply_lockscreen_fab"
        app:layout_constraintStart_toStartOf="@+id/apply_lockscreen_fab"
        app:showMotionSpec="@anim/fab_show_motion_spec"
        app:hideMotionSpec="@anim/fab_hide_motion_spec"/>

    <TextView
        android:id="@+id/copyrightView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/foreground_text"
        android:padding="6dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageWallpaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>